# backend-challenge

./: .gitignore  README.md  create_reviews.py  pyproject.toml
apps/: env.py  settings.py  urls.py
apps/review/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/review/migrations/: 0001_initial.py
docker/: Dockerfile  docker-compose-postgis.yml  docker-compose.dev.yml
scripts/: run.sh
